# buffr-core

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs  deny.toml
assets/: edit.js  exit_insert.js  focus_first_input.js  hint.js  media_probe_init.js  media_probe_poll.js  new_tab.html
src/: app.rs  audio.rs  cmdline.rs  crash.rs  cursor.rs  download_notice.rs  edit.rs  favicon.rs  find.rs  handlers.rs  hint.rs  host.rs  lib.rs  new_tab.rs  open_finder.rs  osr.rs  permissions.rs  scripts.rs  telemetry.rs  updates.rs
