[package]
name = "buffr-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "CEF integration and browser host for buffr."
build = "build.rs"

[features]
default = []
# Off-screen rendering for native Wayland (Phase 3). Currently
# scaffolded (see `src/osr.rs`) but not implemented — runtime entry
# points panic with `unimplemented!()`.
osr = []

[dependencies]
cef.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
directories.workspace = true
raw-window-handle.workspace = true
# `BrowserHost::dispatch` matches on `buffr_modal::PageAction` to
# translate page-mode actions into CEF calls. We pull `buffr-modal`
# without its `winit` feature here — the adapter side is wired in
# from `apps/buffr` instead.
buffr-modal.workspace = true
# Phase 5: CEF `LoadHandler` records every main-frame navigation into
# `buffr-history`. `BrowserHost::new` accepts an `Arc<History>` and
# wires it through the `Client` it hands to
# `browser_host_create_browser_sync`.
buffr-history.workspace = true
