[package]
name = "buffr-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "CEF integration and browser host for buffr."
build = "build.rs"

[features]
default = []
# Off-screen rendering for native Wayland (Phase 3). Currently
# scaffolded (see `src/osr.rs`) but not implemented — runtime entry
# points panic with `unimplemented!()`.
osr = []

[dependencies]
cef.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
directories.workspace = true
raw-window-handle.workspace = true
serde.workspace = true
serde_json.workspace = true
# Phase 6: crash reporter timestamps + telemetry counters reuse the
# workspace `chrono`. `serde` enables `DateTime<Utc>` derive(Serialize)
# in `CrashReport`; `clock` enables `Utc::now()`.
chrono = { workspace = true, features = ["serde", "clock"] }
# `BrowserHost::dispatch` matches on `buffr_modal::PageAction` to
# translate page-mode actions into CEF calls. We pull `buffr-modal`
# without its `winit` feature here — the adapter side is wired in
# from `apps/buffr` instead.
buffr-modal.workspace = true
# Phase 5: CEF `LoadHandler` records every main-frame navigation into
# `buffr-history`. `BrowserHost::new` accepts an `Arc<History>` and
# wires it through the `Client` it hands to
# `browser_host_create_browser_sync`.
buffr-history.workspace = true
# Phase 5: CEF `DownloadHandler` routes download progress + lifecycle
# events into `buffr-downloads`. `BrowserHost::new` accepts an
# `Arc<Downloads>` + the resolved `DownloadsConfig` (where files land,
# whether to open on finish).
buffr-downloads.workspace = true
buffr-config.workspace = true
# Phase 5: per-site zoom levels persisted across sessions.
# `BrowserHost::dispatch` writes through; the CEF `LoadHandler` reads
# the stored level on load to restore it.
buffr-zoom.workspace = true
# Phase 5: SQLite-backed per-origin permissions store. The CEF
# `PermissionHandler` (in `handlers.rs`) pre-checks remembered
# decisions; the UI thread persists user choices marked "always".
buffr-permissions.workspace = true
# Phase 6 update channel — `UpdateChecker` does one HTTP GET per
# `check_interval_hours` against the GitHub releases API. The trait
# `HttpClient` keeps the network shimmable for tests; the `ureq`
# implementation is the production path.
ureq.workspace = true
semver.workspace = true

[dev-dependencies]
# Tests for `telemetry` and `crash` write to scratch directories.
tempfile.workspace = true
# Tests for `updates` round-trip the `[updates]` section through TOML
# to verify `serde(deny_unknown_fields)` rejects typos.
toml.workspace = true
