[package]
name = "buffr-core"
description = "CEF integration and browser host for buffr."
version = "0.1.1"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/kryptic-sh/buffr-core"
homepage = "https://buffr.kryptic.sh"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
readme = "README.md"
build = "build.rs"

[features]
# Off-screen rendering path (Linux default; always compiled in).
# The feature flag exists so `--features osr` is accepted by CI
# without cargo rejecting it as unknown.
osr = []

[dependencies]
cef = "147"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
directories = "6"
raw-window-handle = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
ureq = { version = "3", features = ["json"] }
semver = { version = "1", features = ["serde"] }
buffr-modal = "0.1"
buffr-history = "0.1"
buffr-downloads = "0.1"
buffr-config = "0.1"
buffr-zoom = "0.1"
buffr-permissions = "0.1"
hjkl-clipboard = "=0.3.0"

[dev-dependencies]
tempfile = "3"
toml = "1.1"
